@@ -40,6 +40,7 @@
  * 31-Jan-2007 : Fixed serialization support (DG);
  * 09-Mar-2007 : Fixed cloning (DG);
  * 14-Jun-2007 : Use double primitive in PaintItem (DG);
+ * 20-Jun-2007 : Removed deprecated code (DG);
  * 
  */
 
@@ -228,20 +229,6 @@ public class LookupPaintScale
      */
     public double getUpperBound() {
         return this.upperBound;
-    }
-
-    /**
-     * Adds an entry to the lookup table.  Any values from <code>n</code> up
-     * to but not including the next value in the table take on the specified
-     * <code>paint</code>.
-     * 
-     * @param value  the data value (<code>null</code> not permitted).
-     * @param paint  the paint.
-     * 
-     * @deprecated Use {@link #add(double, Paint)}.
-     */
-    public void add(Number value, Paint paint) {
-        add(value.doubleValue(), paint);
     }
     
     /**
