@@ -40,6 +40,7 @@
  * 31-Jan-2007 : Additional serialization tests (DG);
  * 07-Mar-2007 : Added new tests (DG);
  * 09-Mar-2007 : Check independence in testCloning() (DG);
+ * 20-Jun-2007 : Updated for deprecated code removal (DG);
  *
  */
 
@@ -97,11 +98,11 @@ public class LookupPaintScaleTests extends TestCase {
         g2 = new LookupPaintScale(1.0, 2.0, Color.red);
         assertTrue(g1.equals(g2));
         
-        g1.add(new Double(1.5), new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 
-                4.0f, Color.blue));
+        g1.add(1.5, new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 4.0f, 
+                Color.blue));
         assertFalse(g1.equals(g2));
-        g2.add(new Double(1.5), new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 
-                4.0f, Color.blue));
+        g2.add(1.5, new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 4.0f, 
+                Color.blue));
         assertTrue(g1.equals(g2));
     }
     
@@ -122,16 +123,16 @@ public class LookupPaintScaleTests extends TestCase {
         assertTrue(g1.equals(g2));
         
         // check independence
-        g1.add(new Double(0.5), Color.red);
+        g1.add(0.5, Color.red);
         assertFalse(g1.equals(g2));
-        g2.add(new Double(0.5), Color.red);
+        g2.add(0.5, Color.red);
         assertTrue(g1.equals(g2));
         
         // try with gradient paint
         g1 = new LookupPaintScale(1.0, 2.0, new GradientPaint(1.0f, 2.0f, 
                 Color.red, 3.0f, 4.0f, Color.green));
-        g1.add(new Double(1.5), new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 
-                4.0f, Color.blue));
+        g1.add(1.5, new GradientPaint(1.0f, 2.0f, Color.red, 3.0f, 4.0f, 
+                Color.blue));
         g2 = null;
         try {
             g2 = (LookupPaintScale) g1.clone();
@@ -168,7 +169,7 @@ public class LookupPaintScaleTests extends TestCase {
         
         g1 = new LookupPaintScale(1.0, 2.0, new GradientPaint(1.0f, 2.0f, 
                 Color.red, 3.0f, 4.0f, Color.yellow));
-        g1.add(new Double(1.5), new GradientPaint(1.1f, 2.2f, Color.red, 3.3f, 
+        g1.add(1.5, new GradientPaint(1.1f, 2.2f, Color.red, 3.3f, 
                 4.4f, Color.blue));
         g2 = null;
         try {
@@ -221,21 +222,21 @@ public class LookupPaintScaleTests extends TestCase {
         assertEquals(Color.black, s.getPaint(100.0));
         assertEquals(Color.black, s.getPaint(101.0));
         
-        s.add(new Double(50.0), Color.blue);
+        s.add(50.0, Color.blue);
         assertEquals(Color.black, s.getPaint(-1.0));
         assertEquals(Color.black, s.getPaint(0.0));
         assertEquals(Color.blue, s.getPaint(50.0));
         assertEquals(Color.blue, s.getPaint(100.0));
         assertEquals(Color.black, s.getPaint(101.0));
         
-        s.add(new Double(50.0), Color.red);
+        s.add(50.0, Color.red);
         assertEquals(Color.black, s.getPaint(-1.0));
         assertEquals(Color.black, s.getPaint(0.0));
         assertEquals(Color.red, s.getPaint(50.0));
         assertEquals(Color.red, s.getPaint(100.0));
         assertEquals(Color.black, s.getPaint(101.0));
         
-        s.add(new Double(25.0), Color.green);
+        s.add(25.0, Color.green);
         assertEquals(Color.black, s.getPaint(-1.0));
         assertEquals(Color.black, s.getPaint(0.0));
         assertEquals(Color.green, s.getPaint(25.0));
@@ -243,7 +244,7 @@ public class LookupPaintScaleTests extends TestCase {
         assertEquals(Color.red, s.getPaint(100.0));
         assertEquals(Color.black, s.getPaint(101.0));
         
-        s.add(new Double(75.0), Color.yellow);
+        s.add(75.0, Color.yellow);
         assertEquals(Color.black, s.getPaint(-1.0));
         assertEquals(Color.black, s.getPaint(0.0));
         assertEquals(Color.green, s.getPaint(25.0));
